fixed card alignment on index.html and search.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,16 @@ body{
 }
 
 .card {
-    width: 100%;
+    width: 95%;
     height: 12rem;
     overflow: hidden;
+}
+.newCard {
+    width: 95%;
+    height: 12rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
 select:hover{
@@ -156,11 +163,15 @@ footer {
     .today-img {
         width: 90%;
     }
+    .card {
+        width: 70%;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     .card {
         height: 14rem;
+        width: 85%;
     }
     .button {
         width: 20%;
